Gap inter-text ( h3 & h4 ) on menu pages is corrected

--- a/scss/page/menu.scss
+++ b/scss/page/menu.scss
@@ -252,7 +252,7 @@ nav {
   flex-flow: column nowrap;
   justify-content: center;
   padding-left: 3%;
-  gap: $padding-small;
+  gap: 9px;
   overflow: hidden;
 }
 
